# mailingServiceTestCase

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  celery_app.py  docker-compose.yml  pyproject.toml  setup.cfg
core/: __init__.py  settings.py  urls.py
mailing/: admin.py
mailing/api/: serializers.py  urls.py  views.py
mailing/db/: crud.py  models.py
mailing/migrations/: 0001_initial.py
mailing/services/: service.py  tasks.py
tests/test_api/: conftest.py  test_views.py
